feat(api): add hub receiving reconciliation
